@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-11-01T00:49:54Z",
+  "timestamp" : "2022-11-05T08:09:06Z",
   "count_outdated" : 69,
   "uniques_outdated" : 31,
-  "count" : 71,
-  "uniques" : 33,
+  "count" : 72,
+  "uniques" : 34,
   "views" : [
     {
       "timestamp": "2022-10-24T00:00:00Z",
@@ -14,6 +14,13 @@
     },
     {
       "timestamp": "2022-10-25T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-11-05T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
