@@ -1,3 +1,11 @@
+2022-11-05T08:09:06Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3399304805 # 585
+* notice: last 14d: unq all: 3 3
+* notice: prev accum: outdated-unq outdated-all / unq all: 31 69 / 33 71
+* notice: next accum: outdated-unq outdated-all / unq all: 31 69 / 34 72
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-11-05]
+
 2022-11-01T00:49:54Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3365889735 # 572
 * notice: last 14d: unq all: 2 2
